# latin-reader

./: .dockerignore  .gitignore  Dockerfile  README.md  bootstrap_model.sh  pyproject.toml  run.sh  test_formatter.py  test_parse.py
diagnostics/: README.md  app.py  data_loader.py  evaluator.py  parser.py  pyproject.toml  reporter.py  run_app.sh
latin_reader/: __init__.py  app.py  config.py
latin_reader/latincy_postprocessor/: cli.py  conllu_io.py  lexicons.py  pipeline.py  sentence.py
latin_reader/latincy_postprocessor/rules/: advcl_pred.py  base.py  obl_agent.py  obl_arg.py
latin_reader/latincy_postprocessor/tests/: test_advcl_pred.py  test_obl_agent.py  test_obl_arg.py
latin_reader/pipeline/: __init__.py  chunker.py  export.py  exporter.py  parser.py  postprocessor.py  renderer.py
latin_reader/routes/: __init__.py  api.py  dev.py  main.py
latin_reader/static/css/: style.css
latin_reader/static/js/: app.js
latin_reader/templates/: about.html  base.html  dev_raw.html  index.html
latin_reader/treebanks/: __init__.py  perseus.py
scripts/: download_treebank.py  extract_obl_arg_frames.py
tests/: __init__.py  conftest.py  test_app_smoke.py  test_chunker.py  test_postprocessor_improves.py  test_renderer.py
