[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latin-reader"
version = "0.1.0"
description = "Web application for reading Latin texts with automatic syntactic chunking"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "flask>=3.0",
    "spacy>=3.7,<3.9",
    "jinja2>=3.1",
    "fpdf2>=2.7",
    "python-docx>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-flask>=1.3",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["latin_reader*"]
exclude = ["tests*", "diagnostics*"]

[tool.ruff]
line-length = 100
target-version = "py310"
