[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latincy-postprocessor"
version = "0.1.0"
description = "Rule-based post-processor to align LatinCy output with UDante UD conventions"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
latincy-postprocess = "latincy_postprocessor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["latincy_postprocessor*"]
exclude = ["latincy_postprocessor.tests*"]